--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (prefers-color-scheme: dark) {
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    color: rgb(var(--foreground-rgb));
+    /* background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb)); */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@layer utilities {
+    .text-balance {
+        text-wrap: balance;
+    }
 }
 
-.App-link {
-  color: #61dafb;
+.theam_bg {
+    background: #fafbfb
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error-message {
+    color: red;
+}
+
+
+.categoriesImgBtn {
+    position: absolute;
+    top: 5px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    padding: 3px 5px;
+    border-radius: 50%;
+    width: 25px;
+    color: white;
+    background: gray;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+@media (min-width: 1024px) {
+    .displayBtnhide {
+        display: none;
+    }
+}
+
+.text-error {
+    color: red;
+}
+
+.text-error:hover {
+    color: red !important;
+    /* text color changes to red on hover */
+}
+
+.form-column {
+    flex: 2;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.width_100 {
+    width: 100px;
 }
